--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
               uses: actions/setup-node@v4
             - name: Install pnpm
               uses: pnpm/action-setup@v4
+              with:
+                version: 9
             - name: Install dependencies
               run: pnpm install
             - name: Run tests
